some sockets events

--- a/client/index.html
+++ b/client/index.html
@@ -238,7 +238,7 @@
         </div>
 
         <div class="messages-container">
-          <div class="message received">
+          <!-- <div class="message received">
             <div>Hi! How are you?</div>
             <div class="message-time">10:15 AM</div>
           </div>
@@ -253,7 +253,7 @@
           <div class="message sent">
             <div>See you tomorrow!</div>
             <div class="message-time">10:30 AM</div>
-          </div>
+          </div> -->
         </div>
 
         <div class="chat-input">
